--- a/.htaccess
+++ b/.htaccess
@@ -1,35 +1,62 @@
 # rewrite rules
 <IfModule mod_rewrite.c>
 
-RewriteEngine on
+	RewriteEngine on
 
-# block files and folders beginning with a dot, such as .git
-# except for the .well-known folder, which is used for Let's Encrypt and security.txt
-RewriteRule (^|/)\.(?!well-known\/) index.php [L]
+	# block files and folders beginning with a dot, such as .git
+	# except for the .well-known folder, which is used for Let's Encrypt and security.txt
+	RewriteRule (^|/)\.(?!well-known\/) index.php [L]
 
-# block all files in the content folder from being accessed directly
-RewriteRule ^data/(.*) index.php [L]
-RewriteRule ^backups/(.*) index.php [L]
-RewriteRule ^cache/(.*) index.php [L]
+	# block all files in the content folder from being accessed directly
+	RewriteRule ^data/(.*) index.php [L]
+	RewriteRule ^backups/(.*) index.php [L]
+	RewriteRule ^cache/(.*) index.php [L]
 
-# block all files in the site folder from being accessed directly, except js and css folders
-RewriteRule ^guts/(js|css|forms)/ - [L]
-RewriteRule ^guts/(.*) index.php [F]
+	# block all files in the site folder from being accessed directly, except js and css folders
+	RewriteRule ^guts/(js|css|images)/ - [L]
+	RewriteRule ^guts/(.*) index.php [F]
 
-# make site links work
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*) index.php [L]
+	# make site links work
+	RewriteCond %{REQUEST_FILENAME} !-f
+	RewriteCond %{REQUEST_FILENAME} !-d
+	RewriteRule ^(.*) index.php [L]
 
 </IfModule>
 
 # compress text file responses
 <IfModule mod_deflate.c>
-AddOutputFilterByType DEFLATE text/plain
-AddOutputFilterByType DEFLATE text/html
-AddOutputFilterByType DEFLATE text/css
-AddOutputFilterByType DEFLATE text/javascript
-AddOutputFilterByType DEFLATE application/json
-AddOutputFilterByType DEFLATE application/javascript
-AddOutputFilterByType DEFLATE application/x-javascript
+	AddOutputFilterByType DEFLATE text/plain
+	AddOutputFilterByType DEFLATE text/html
+	AddOutputFilterByType DEFLATE text/css
+	AddOutputFilterByType DEFLATE text/javascript
+	AddOutputFilterByType DEFLATE application/json
+	AddOutputFilterByType DEFLATE application/javascript
+	AddOutputFilterByType DEFLATE application/x-javascript
+</IfModule>
+
+# caching
+<IfModule mod_expires.c>
+	ExpiresActive On
+	ExpiresDefault "access plus 1 month"
+	ExpiresByType image/jpg "access plus 1 month"
+	ExpiresByType image/jpeg "access plus 1 month"
+	ExpiresByType image/gif "access plus 1 month"
+	ExpiresByType image/png "access plus 1 month"
+	ExpiresByType image/svg+xml             "access plus 1 month"
+	ExpiresByType image/x-icon "access plus 1 week"
+	ExpiresByType text/php "access plus 30 seconds"
+	ExpiresByType text/js "access plus 4 weeks"
+	ExpiresByType text/css "access plus 4 weeks"
+	ExpiresByType text/x-javascript "access plus 4 weeks"
+	ExpiresByType text/javascript           "access 4 weeks"
+	ExpiresByType font/truetype             "access plus 1 month"
+	ExpiresByType font/opentype             "access plus 1 month"
+	ExpiresByType application/x-font-woff   "access plus 1 month"
+	ExpiresByType application/vnd.ms-fontobject "access plus 1 month"
+	ExpiresByType application/json          "access plus 120 seconds"
+	ExpiresByType application/javascript    "access plus 2 months"
+	ExpiresByType application/rss+xml       "access plus 1 hour"
+	<IfModule mod_headers.c>
+		Header append Cache-Control "public"
+	</IfModule>
 </IfModule>
